<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.mainActivity">

    <RelativeLayout
        android:id="@+id/linearLayoutTOP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBackground"
        android:orientation="horizontal"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/maps_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/maps_button"
            android:focusable="true"
            android:foreground="@drawable/rounded_fg"
            android:scaleType="centerCrop"
            android:src="@drawable/maps"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/deployment_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/deployment_button"
            android:focusable="true"
            android:foreground="@drawable/rounded_fg"
            android:scaleType="centerCrop"
            android:src="@drawable/deployments"
            tools:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayoutMID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutTOP"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBackground"
        android:orientation="horizontal"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/events_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:contentDescription="@string/events_button"
            android:focusable="true"
            android:foreground="@drawable/rounded_fg"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/events" />

        <ImageView
            android:id="@+id/quest_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:contentDescription="@string/quest_button"
            android:focusable="true"
            android:foreground="@drawable/rounded_fg"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/quest" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayoutBOT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutMID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:visibility="visible">

        <RelativeLayout
            android:id="@+id/linearLayoutInnerBOT1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            tools:visibility="visible">

            <Spinner
                android:id="@+id/Band_Selector"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_alignStart="@id/band_select_button"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="@android:color/background_light"
                android:entries="@array/bands"
                android:textColor="@android:color/white"
                tools:visibility="visible" />

            <Button
                android:id="@+id/band_select_button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/show_band" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayoutInnerBOT2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutInnerBOT1"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/battleplan_generator"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_centerHorizontal="true"
                android:baselineAligned="true"
                android:drawingCacheQuality="auto"
                android:orientation="horizontal"
                tools:visibility="visible">

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/EqulibratedButton"
                    android:textColorLink="@color/colorAccent"
                    android:textOff="@string/non_equilibrated"
                    android:textOn="@string/equilibrado"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/playersLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/toggleButton"
                    android:layout_alignEnd="@id/battleplan_generator_button"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:baselineAligned="true"
                    android:drawingCacheQuality="auto"
                    android:orientation="vertical"
                    tools:visibility="visible">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/_2jugadores"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/_2_jugadores"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp" />

                </RadioGroup>

                <ImageView
                    android:id="@+id/battleplan_generator_button"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:contentDescription="@string/battleplan_gen"
                    android:focusable="true"
                    android:foreground="@drawable/rounded_fg"
                    android:textAlignment="center"
                    app:srcCompat="@drawable/battleplan_generator" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>