<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adapters.TextCard">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/CardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background"
            android:orientation="horizontal"
            tools:visibility="visible">

            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/cardLetter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/cardType"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/CardViewTittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardLetter"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/kroftsman"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/card_tittle"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="40dp"
                    android:typeface="@font/kroftsmann" />
            </RelativeLayout>
            <TextView
                android:id="@+id/CardViewDescription"
                android:layout_width="300dp"
                android:layout_height="450dp"
                android:layout_below="@id/headerLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:text="@string/questViewDescription"
                android:textColor="@color/design_default_color_on_secondary"
                android:textAlignment="center"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/CardViewEquilibrated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CardViewDescription"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/equilibrated"
                app:srcCompat="@drawable/equilibrated"
                tools:visibility="visible" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>