<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ImageCardFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/CardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background2"
            tools:visibility="visible">

            <TextView
                android:id="@+id/CardViewTittle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/kroftsman"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/card_tittle"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="40sp"
                android:visibility="invisible"/>


            <ImageView
                android:id="@+id/CardViewEquilibrated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/equilibrated"
                android:orientation="vertical"

                android:scaleType="centerInside"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:src="@drawable/equilibrated"
                android:verticalScrollbarPosition="defaultPosition"
                tools:visibility="visible" />

            <RelativeLayout
                android:id="@+id/ImageLayout"
                android:layout_width="300dp"
                android:layout_height="400dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/CardViewImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/todo"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:visibility="visible" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>